Prevent flyout from hiding behind toolbar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .example-toolbar {
     position: fixed;
-    z-index: 200;
+    z-index: 100;
 }
 
 #router-out {
